assign role + multiple role
